--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Input from "../components/Input.astro";
-import Button from "../components/Button.astro";
+import Layout from '../layouts/Layout.astro'
+import Input from '../components/Input.astro'
+import Button from '../components/Button.astro'
 
-import { contacts } from "../utils/constants";
+import { contacts } from '../utils/constants'
 ---
 
 <Layout title="Zahtev za grupnu posetu">
@@ -104,6 +104,7 @@ import { contacts } from "../utils/constants";
     }
     .name-email {
       margin-top: 1.5rem;
+      flex-direction: column;
     }
   }
 </style>
