--- a/src/pages/zahtev-za-rucak.astro
+++ b/src/pages/zahtev-za-rucak.astro
@@ -101,7 +101,7 @@ const meals = [
   <Input type="textarea" label="Napomena:" />
   <br />
 
-  <p>Napomena:</p>
+  <p>NAPOMENA:</p>
   <p>
     {paragraphes[1]}
   </p>
