--- a/src/components/CommonPage.astro
+++ b/src/components/CommonPage.astro
@@ -1,21 +1,17 @@
 ---
-import LinkCard from "./LinkCard.astro";
-const { heading, image, cards, paragraphs, headingWhite } = Astro.props;
-const imageLink = `url(/commonPages/${image}.jpeg)`;
+import LinkCard from './LinkCard.astro'
+const { heading, image, cards, paragraphs, headingWhite } = Astro.props
+const imageLink = `url(/commonPages/${image}.jpeg)`
 ---
 
 <div>
   <div class="hero">
-    <h1 class:list={["text-center", headingWhite && "heading-white"]}>
+    <h1 class:list={['text-center', headingWhite && 'heading-white']}>
       {heading}
     </h1>
   </div>
   <div class="cards">
-    {
-      cards.map((card: string) => (
-        <LinkCard link={card} location="commonPages" />
-      ))
-    }
+    {cards.map((card: string) => <LinkCard link={card} location="commonPages" />)}
   </div>
   <div class="paragraphs">
     {
@@ -59,11 +55,14 @@ const imageLink = `url(/commonPages/${image}.jpeg)`;
   @media (max-width: 768px) {
     .hero {
       height: 15rem;
+      padding-top: 4.5rem;
     }
     .cards {
-      height: 3.5rem;
-      margin-top: -1.5rem;
-      gap: 0.5rem;
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      margin-top: -3rem;
+      height: 12rem;
+      gap: 1.5rem;
     }
     .paragraphs {
       margin-top: 2rem;
